--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -101,7 +101,7 @@
 					<img src="i/landing/flat-feature-icon-4.png" alt="analytics-icon">
 					<div class="caption">
 						<h3>Общение</h3>
-						<p>Соседи могут посоветовать хороший магазин или дать отзыв о детском саде рядом с домом</p>
+						<p>Соседи могут посоветовать хороший магазин или дать отзыв о детском саде рядом с домом.</p>
 					</div>
 				</div>
 			</div>
@@ -143,31 +143,31 @@
 			<div class="col-md-6">
 				<h6>Безопасность</h6>
 				<ul>
-					<li>Каждый Ваш сосед подтверждает свое местожительства</li>
-					<li>Все данные передаются по зашифрованному протоколу https</li>
-					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения и контакную инофрмацию</li>
-					<li>Зарегистрироваться возможно только по индивидуальному коду-приглашению</li>
+					<li>Каждый Ваш сосед подтверждает свое местожительство.</li>
+					<li>Все данные передаются по зашифрованному протоколу https.</li>
+					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения и контакную инофрмацию.</li>
+					<li>Зарегистрироваться возможно только по индивидуальному коду-приглашению.</li>
 				</ul>
 				<h6>Приватность</h6>
 				<ul>
-					<li>Вы сами определяете, какую информацию и новости будете получать в уведомлениях yf email</li>
-					<li>Ваши данные защищены от попадания в Google, Yandex или другие поисковые системы</li>
-					<li>Вы сами выбираете, какую информацию о Вас видят остальные</li>
+					<li>Вы сами определяете, какую информацию и новости будете получать в уведомлениях по электронной почте.</li>
+					<li>Ваши данные защищены от попадания в Google, Yandex или другие поисковые системы.</li>
+					<li>Вы сами выбираете, какую информацию о Вас видят остальные.</li>
 				</ul>
 
 			</div>
 			<div class="col-md-6">
 				<h6>Комфорт</h6>
 				<ul>
-					<li>Вы всегда будете знать когда снова включат отопление и интернет</li>
-					<li>Вы указываете только ту информацию о себе, какую захотите</li>
-					<li>Здороваясь с соседями в лифте, Вы будете знать их имя.</li>
+					<li>Вы всегда будете знать, когда снова включат отопление и интернет.</li>
+					<li>Вы указываете только ту информацию о себе, какую захотите.</li>
+					<li>Здороваясь с соседями в лифте, Вы будете знать их имена.</li>
 				</ul>
 				<h6>Польза</h6>
 				<ul>
-					<li>Соседи могут посоветовать хорошее кафе рядом с домом</li>
-					<li>Совместные с соседями оптовые покупки позволят выиграть в цене и качестве</li>
-					<li>Инициативу отремонтировать детскую площадку или организовать парковку - может поддержать больше людей, чем вы думаете</li>
+					<li>Соседи могут посоветовать хорошее кафе рядом с домом.</li>
+					<li>Совместные с соседями оптовые покупки позволят выиграть в цене и качестве.</li>
+					<li>Инициативу отремонтировать детскую площадку или организовать парковку может поддержать больше людей, чем вы думаете.</li>
 				</ul>
 			</div>
 		</section>
